# CGP20

./: Cargo.toml  README.md  error.txt
src/: camera.rs  color.rs  geometry.rs  icosphere.rs  idgen.rs  initconf.rs  lavaplanet.rs  main.rs  renderer.rs  skybox.rs  sun.rs  terraplanet.rs
src/shaders/: dryplanet.frag  dryplanet.vert  dwarfplanet.frag  dwarfplanet.vert  gasplanet.frag  gasplanet.vert  gravity.comp  lavaplanet.frag  lavaplanet.vert  lighting.glsl  movement.comp  noise.glsl  planetuniform.glsl  skybox.frag  skybox.vert  star.frag  star.vert  terra.frag  terraplanet.frag  terraplanet.vert  types.glsl
