[package]
name = "cg20"
version = "0.1.0"
authors = ["Mathias Plans <mathias.plans@estcube.eu>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18.0"
vulkano-shaders = "0.18.0"
winit = "0.22"
vulkano-win = "0.18.0"
cgmath = "0.17.0"
rand = "0.7"